--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -17,3 +17,10 @@ plugins: ['react']
 settings:
   react:
     version: '16'
+
+rules:
+  react/react-in-jsx-scope: 0
+
+globals:
+  React: true
+  PropTypes: true
